# TrackerClass

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.py  create_make.json  create_make.py
include/: SingletonHandler.hpp  mystd.hpp
include/logging/: GraphDumper.hpp  Logger.hpp
include/tracker/: CallStackTracker.hpp  Tracker.hpp
include/tracking/: CallStackTracker.hpp  Tracker.hpp
src/: main.cpp
src/logging/: GraphDumper.cpp  Logger.cpp
src/tracking/: CallStackTracker.cpp
targets/: example1.cpp  example2.cpp  main.cpp
